--- a/AppIdeaz/Base.lproj/Main.storyboard
+++ b/AppIdeaz/Base.lproj/Main.storyboard
@@ -22,20 +22,20 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="testCell" id="vbM-km-CVA" customClass="ChecckTableViewCell" customModule="AppIdeaz" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="46.5"/>
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="39.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vbM-km-CVA" id="xFK-oF-cyM">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="46.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="39.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2UW-Q9-9oI">
-                                                    <rect key="frame" x="20" y="11" width="35.5" height="24.5"/>
+                                                    <rect key="frame" x="20" y="11" width="35.5" height="17.5"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view opaque="NO" tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hjp-Wr-BQ6" customClass="Checkbox" customModule="AppIdeaz" customModuleProvider="target">
-                                                    <rect key="frame" x="374.5" y="13" width="19.5" height="20.5"/>
+                                                    <rect key="frame" x="374.5" y="6" width="19.5" height="27.5"/>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <connections>
                                                         <action selector="checked:" destination="vbM-km-CVA" eventType="valueChanged" id="Wem-OP-gwR"/>
@@ -43,12 +43,12 @@
                                                 </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="hjp-Wr-BQ6" secondAttribute="bottom" constant="2" id="7fT-Zd-OX4"/>
+                                                <constraint firstAttribute="trailing" secondItem="hjp-Wr-BQ6" secondAttribute="trailing" constant="20" symbolic="YES" id="7xV-No-ROd"/>
+                                                <constraint firstItem="hjp-Wr-BQ6" firstAttribute="top" secondItem="xFK-oF-cyM" secondAttribute="top" constant="6" id="9n0-gv-bHa"/>
                                                 <constraint firstItem="2UW-Q9-9oI" firstAttribute="top" secondItem="xFK-oF-cyM" secondAttribute="topMargin" id="EFJ-jA-8Pf"/>
                                                 <constraint firstItem="2UW-Q9-9oI" firstAttribute="leading" secondItem="xFK-oF-cyM" secondAttribute="leadingMargin" id="Oso-AM-l8i"/>
+                                                <constraint firstAttribute="bottom" secondItem="hjp-Wr-BQ6" secondAttribute="bottom" constant="6" id="SgB-SP-eTs"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="2UW-Q9-9oI" secondAttribute="bottom" id="YrO-R2-Gec"/>
-                                                <constraint firstItem="hjp-Wr-BQ6" firstAttribute="top" secondItem="xFK-oF-cyM" secondAttribute="topMargin" constant="2" id="hpr-Iz-GVg"/>
-                                                <constraint firstItem="hjp-Wr-BQ6" firstAttribute="trailing" secondItem="xFK-oF-cyM" secondAttribute="trailingMargin" id="uDZ-BZ-DV6"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -64,7 +64,7 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U1Z-dT-I0K">
-                                <rect key="frame" x="354.5" y="64" width="43.5" height="31"/>
+                                <rect key="frame" x="354" y="64" width="44" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain">
                                     <imageReference key="image" image="plus" catalog="system" symbolScale="large"/>
@@ -74,7 +74,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wEj-Vn-EYH">
-                                <rect key="frame" x="16" y="66" width="46" height="31"/>
+                                <rect key="frame" x="16" y="66" width="45.5" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain">
                                     <imageReference key="image" image="square.and.pencil" catalog="system" symbolScale="large"/>
@@ -84,7 +84,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AppIdeaz" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="4" translatesAutoresizingMaskIntoConstraints="NO" id="xfk-gl-vJn">
-                                <rect key="frame" x="145" y="73" width="127" height="37"/>
+                                <rect key="frame" x="144.5" y="73" width="127" height="37"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -94,17 +94,18 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="U1Z-dT-I0K" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="60H-uf-APE"/>
+                            <constraint firstItem="xfk-gl-vJn" firstAttribute="centerX" secondItem="l7O-g6-57Y" secondAttribute="centerX" id="6GR-zY-xe1"/>
                             <constraint firstItem="l7O-g6-57Y" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="1" id="7f6-lM-kJf"/>
-                            <constraint firstItem="U1Z-dT-I0K" firstAttribute="leading" secondItem="xfk-gl-vJn" secondAttribute="trailing" constant="82.5" id="N8K-kC-qbJ"/>
+                            <constraint firstItem="U1Z-dT-I0K" firstAttribute="leading" secondItem="xfk-gl-vJn" secondAttribute="trailing" constant="82.5" id="KMp-H5-HvZ"/>
                             <constraint firstItem="l7O-g6-57Y" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="1" id="TH2-aj-vKO"/>
                             <constraint firstItem="wEj-Vn-EYH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="U4L-cB-NJN"/>
                             <constraint firstItem="wEj-Vn-EYH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="22" id="VQD-Zr-yBW"/>
-                            <constraint firstItem="xfk-gl-vJn" firstAttribute="leading" secondItem="wEj-Vn-EYH" secondAttribute="trailing" constant="83" id="bXY-TN-1Xc"/>
                             <constraint firstItem="l7O-g6-57Y" firstAttribute="top" secondItem="U1Z-dT-I0K" secondAttribute="bottom" constant="23" id="kO4-4D-6X5"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="U1Z-dT-I0K" secondAttribute="trailing" constant="16" id="lQv-wU-60s"/>
                             <constraint firstItem="l7O-g6-57Y" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="1" id="m4Q-mt-KhY"/>
                             <constraint firstItem="l7O-g6-57Y" firstAttribute="top" secondItem="xfk-gl-vJn" secondAttribute="bottom" constant="8" symbolic="YES" id="oQS-BC-qkl"/>
                             <constraint firstItem="xfk-gl-vJn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="29" id="q5r-TG-Rlg"/>
+                            <constraint firstItem="xfk-gl-vJn" firstAttribute="leading" secondItem="wEj-Vn-EYH" secondAttribute="trailing" constant="83" id="waY-bs-MI9"/>
                             <constraint firstItem="l7O-g6-57Y" firstAttribute="top" secondItem="wEj-Vn-EYH" secondAttribute="bottom" constant="21" id="zjN-Dh-cbh"/>
                         </constraints>
                     </view>
@@ -114,7 +115,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="130.40000000000001" y="118.29085457271366"/>
+            <point key="canvasLocation" x="128.98550724637681" y="117.85714285714285"/>
         </scene>
         <!--Idea View Controller-->
         <scene sceneID="uip-v4-Mqq">
@@ -125,18 +126,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text=" " borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TD8-93-wUO">
-                                <rect key="frame" x="20" y="238" width="374" height="34"/>
+                                <rect key="frame" x="20" y="221" width="374" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IDEA" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J89-wE-oX0">
-                                <rect key="frame" x="149" y="128" width="115" height="37"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8h1-RW-c4M">
-                                <rect key="frame" x="70" y="588" width="273" height="39.5"/>
+                                <rect key="frame" x="71" y="355" width="272" height="39.5"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Save" titleAlignment="center">
                                     <fontDescription key="titleFontDescription" name="Helvetica" family="Helvetica" pointSize="22"/>
@@ -145,19 +140,25 @@
                                     <action selector="save:" destination="a2z-yt-gh5" eventType="touchUpInside" id="IPR-HL-OTZ"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IDEA" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J89-wE-oX0">
+                                <rect key="frame" x="120" y="64" width="174" height="37"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="LR3-2y-TA1"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="TD8-93-wUO" firstAttribute="leading" secondItem="LR3-2y-TA1" secondAttribute="leading" constant="20" id="0SF-F5-EN6"/>
-                            <constraint firstItem="LR3-2y-TA1" firstAttribute="trailing" secondItem="8h1-RW-c4M" secondAttribute="trailing" constant="71" id="15v-jy-SVd"/>
-                            <constraint firstItem="8h1-RW-c4M" firstAttribute="top" secondItem="TD8-93-wUO" secondAttribute="bottom" constant="316" id="Ixd-iO-Owv"/>
-                            <constraint firstItem="J89-wE-oX0" firstAttribute="leading" secondItem="LR3-2y-TA1" secondAttribute="leading" constant="149" id="JQo-hr-dHC"/>
-                            <constraint firstItem="J89-wE-oX0" firstAttribute="top" secondItem="LR3-2y-TA1" secondAttribute="top" constant="84" id="KYR-4L-YSI"/>
-                            <constraint firstItem="LR3-2y-TA1" firstAttribute="trailing" secondItem="J89-wE-oX0" secondAttribute="trailing" constant="150" id="VCr-Aw-mAJ"/>
-                            <constraint firstItem="LR3-2y-TA1" firstAttribute="trailing" secondItem="TD8-93-wUO" secondAttribute="trailing" constant="20" id="bcU-pI-YlK"/>
-                            <constraint firstItem="8h1-RW-c4M" firstAttribute="leading" secondItem="LR3-2y-TA1" secondAttribute="leading" constant="70" id="rpW-gG-wOo"/>
-                            <constraint firstItem="TD8-93-wUO" firstAttribute="top" secondItem="J89-wE-oX0" secondAttribute="bottom" constant="73" id="sdx-oJ-6JT"/>
+                            <constraint firstItem="LR3-2y-TA1" firstAttribute="trailing" secondItem="J89-wE-oX0" secondAttribute="trailing" constant="120" id="78F-o9-7lu"/>
+                            <constraint firstItem="J89-wE-oX0" firstAttribute="top" secondItem="LR3-2y-TA1" secondAttribute="top" constant="20" id="R55-Is-QP4"/>
+                            <constraint firstItem="LR3-2y-TA1" firstAttribute="trailing" secondItem="TD8-93-wUO" secondAttribute="trailing" constant="20" id="UYt-AR-Qlg"/>
+                            <constraint firstItem="LR3-2y-TA1" firstAttribute="trailing" secondItem="8h1-RW-c4M" secondAttribute="trailing" constant="71" id="YMj-Y3-qM9"/>
+                            <constraint firstItem="TD8-93-wUO" firstAttribute="leading" secondItem="LR3-2y-TA1" secondAttribute="leading" constant="20" id="YRW-0T-nUe"/>
+                            <constraint firstItem="TD8-93-wUO" firstAttribute="top" secondItem="J89-wE-oX0" secondAttribute="bottom" constant="120" id="hdv-At-rFK"/>
+                            <constraint firstItem="J89-wE-oX0" firstAttribute="leading" secondItem="LR3-2y-TA1" secondAttribute="leading" constant="120" id="nYF-nX-LqI"/>
+                            <constraint firstItem="8h1-RW-c4M" firstAttribute="leading" secondItem="LR3-2y-TA1" secondAttribute="leading" constant="71" id="oXI-4Y-lf8"/>
+                            <constraint firstItem="8h1-RW-c4M" firstAttribute="top" secondItem="TD8-93-wUO" secondAttribute="bottom" constant="100" id="tAe-5K-Dki"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="1vS-cj-4gU"/>
@@ -167,7 +168,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dvQ-td-rw0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="944.79999999999995" y="118.29085457271366"/>
+            <point key="canvasLocation" x="943.47826086956525" y="117.85714285714285"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
